--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,6 @@ serde = { version = "1.0", features = ["derive"] }
 env_logger = "0.11.1"
 log = "0.4.20"
 r2d2 = "0.8.10"
-r2d2_sqlite = "0.23.0"
+#r2d2_sqlite = "0.23.0"
+r2d2_sqlite = { git = "https://github.com/ivanceras/r2d2-sqlite", branch = "master" }
+
